# reference-db-agent

./: .env.example  .gitignore  AGENTS.md  PROJECT_CONTEXT.md  README.md  SCRAPING_RULES.md  opencode.json  pyproject.toml
.opencode/agent/: reference-db.md
src/: __init__.py  cli.py  run_manager.py
src/change_detection/: __init__.py  detector.py
src/discovery/: __init__.py  discoverer.py
src/extractors/: __init__.py  base.py  json_ld.py  playwright_extractor.py
src/models/: __init__.py  intelligence.py  nutrition.py  product.py  run.py
src/protection/: __init__.py  analyzer.py
src/reports/: generator.py
